# find_where

./: README.md  example.py  pyproject.toml
find_where/: __init__.py  finder.py
tests/: test_find_where.py
